# mr_qwen3tts

./: .env.example  README.md  plugin_info.json  pyproject.toml  setup.py
src/mr_qwen3tts/: __init__.py  audio_pacer.py  mod.py  realtime_stream.py
src/mr_qwen3tts.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/mr_qwen3tts/openai_impl/: __init__.py  mod.py
src/mr_qwen3tts/vllm_impl/: audio_pacer.py  mod.py
src/mr_qwen3tts/websocket_impl/: README.md  mod.py  realtime_stream.py
